# q-chat-hackathon

./: Cargo.toml  demo_compression.py  plan.md  prompt-condensor-spec.md  usage-offset-implementation.md  usage_summarize_plan.md
crates/amzn-codewhisperer-client/: Cargo.toml
crates/amzn-codewhisperer-streaming-client/: Cargo.toml
crates/amzn-consolas-client/: Cargo.toml
crates/amzn-qdeveloper-streaming-client/: Cargo.toml
crates/amzn-toolkit-telemetry-client/: Cargo.toml
crates/chat-cli/: Cargo.toml
crates/chat-cli/src/cli/: acp_agent.rs  mod.rs
crates/chat-cli/src/cli/chat/: conversation.rs  mod.rs  parser.rs  usage_statistics.rs
crates/chat-cli/src/cli/chat/cli/: condense.rs  mod.rs  usage.rs
crates/chat-cli/src/database/: mod.rs
crates/chat-cli/src/database/sqlite_migrations/: 008_usage_table.sql
crates/prompt_condensor/: Cargo.toml
crates/prompt_condensor/src/: integration_test.rs  lib.rs
crates/prompt_condensor/src/algorithms/: mod.rs  semantic_compression.rs  text_preprocessing.rs
crates/prompt_condensor/src/metrics/: mod.rs
crates/prompt_condensor/src/validation/: mod.rs
