[package]
name = "prompt_condensor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
unicode-segmentation = "1.10"
thiserror = "1.0"
tracing = "0.1"

# For future semantic analysis (Phase 2 step 6)
# sentence-transformers bindings would go here when we implement advanced compression
